# Copyright 2024 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/webui_features.gni")

assert(is_win || is_mac || is_linux || is_chromeos || is_android)

source_set("search") {
  sources = [
    "ntp_custom_background_enabled_policy_handler.cc",
    "ntp_custom_background_enabled_policy_handler.h",
    "search.cc",
    "search.h",
  ]
  public_deps = []
  deps = [
    "//base",
    "//chrome/browser:browser_public_dependencies",
    "//chrome/browser/ntp_tiles",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/search_engines",
    "//chrome/browser/supervised_user",
    "//chrome/common",
    "//components/google/core/common",
    "//components/search",
    "//components/search_engines:search_engine_type",
    "//components/supervised_user/core/browser",
    "//components/supervised_user/core/common:buildflags",
    "//content/public/browser",
    "//url",
  ]
  if (is_android) {
    sources += [
      "contextual_search_policy_handler_android.cc",
      "contextual_search_policy_handler_android.h",
    ]
    public_deps += [ "//components/policy/core/browser" ]
    deps += [ "//components/prefs" ]
    if (enable_webui_ntp) {
      public_deps += [ "//chrome/browser/ui/webui/new_tab_page" ]
    }
  } else {
    sources += [
      "instant_service.cc",
      "instant_service.h",
      "instant_service_factory.cc",
      "instant_service_factory.h",
      "instant_service_observer.cc",
      "instant_service_observer.h",
      "most_visited_iframe_source.cc",
      "most_visited_iframe_source.h",
      "search_engine_base_url_tracker.cc",
      "search_engine_base_url_tracker.h",
    ]
    public_deps += [
      "//base",
      "//chrome/browser/ntp_tiles",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/themes",
      "//chrome/browser/ui/webui/new_tab_page",
      "//chrome/browser/ui/webui/new_tab_page_third_party",
      "//chrome/common",
      "//components/history/core/browser",
      "//components/keyed_service/core",
      "//components/ntp_tiles",
      "//components/policy/core/browser",
      "//components/prefs",
      "//components/search_engines",
      "//content/public/browser",
      "//ui/native_theme",
      "//url",
    ]
    deps += [
      "//chrome/app/theme:theme_resources",
      "//chrome/app/theme:theme_resources_grit",
      "//chrome/browser/resources/new_tab_page_instant:resources",
      "//chrome/browser/resources/new_tab_page_instant:resources_grit",
      "//chrome/browser/ui/webui:theme_source",
      "//chrome/common:constants",
      "//chrome/common:non_code_constants",
      "//chrome/common/search:mojo_bindings",
      "//components/favicon_base",
      "//components/page_image_service/mojom:mojo_bindings",
      "//components/policy:generated",
      "//components/policy:policy_code_generate",
      "//components/policy/core/common",
      "//components/sync_preferences",
      "//extensions/browser",
      "//extensions/common",
      "//mojo/public/cpp/bindings",
      "//ui/base",
      "//ui/gfx:color_utils",
      "//ui/webui/resources/cr_components/composebox:mojo_bindings",
    ]

    # InstantService constructs ThemeSource while theme_source.cc includes
    # instant_service.h (InstantService::ShouldServiceRequest) — a genuine
    # bidirectional pair, with the real dep edge owned here.
    allow_circular_includes_from = [ "//chrome/browser/ui/webui:theme_source" ]
  }
}

if (!is_android) {
  source_set("unit_tests") {
    testonly = true

    configs += [ "//build/config/compiler:no_exit_time_destructors" ]

    # These tests pre-date strict sign-comparison warnings; relax to the warning
    # posture they had while compiled in //chrome/test.
    configs -= [ "//build/config/compiler:chromium_code" ]
    configs += [ "//build/config/compiler:no_chromium_code" ]

    sources = [
      "background/ntp_custom_background_service_unittest.cc",
      "background/wallpaper_search/wallpaper_search_background_manager_unittest.cc",
      "most_visited_iframe_source_unittest.cc",
      "ntp_features_unittest.cc",
    ]

    deps = [
      ":search",
      "//base",
      "//base/test:test_support",
      "//chrome/browser/resources/new_tab_page_instant:resources_grit",
      "//chrome/browser/search/background",
      "//chrome/browser/search_engines",
      "//chrome/test:test_support",
      "//components/application_locale_storage",
      "//components/search",
      "//components/sync_preferences:test_support",
      "//components/themes",
      "//content/test:test_support",
      "//testing/gmock",
      "//testing/gtest",
    ]
  }

  source_set("test_support") {
    testonly = true

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [
      "instant_browsertest_base.cc",
      "instant_browsertest_base.h",
    ]

    public_deps = [ "//chrome/test:test_support_ui" ]

    deps = [
      ":search",
      "//base",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/search_engines",
      "//chrome/browser/ui",
      "//chrome/test:test_support",
      "//content/test:test_support",
      "//testing/gtest",
    ]
  }

  source_set("browser_tests") {
    testonly = true

    configs += [ "//build/config/compiler:no_exit_time_destructors" ]

    # These tests pre-date strict sign-comparison warnings; relax to the warning
    # posture they had while compiled in //chrome/test.
    configs -= [ "//build/config/compiler:chromium_code" ]
    configs += [ "//build/config/compiler:no_chromium_code" ]
    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    sources = [
      "background/wallpaper_search/wallpaper_search_browsertest.cc",
      "instant_service_browsertest.cc",
      "ntp_custom_background_enabled_policy_handler_browsertest.cc",
      "search_browsertest.cc",
      "search_engine_base_url_tracker_browsertest.cc",
    ]

    deps = [
      ":search",
      ":test_support",
      "//base",
      "//chrome/browser/optimization_guide:test_support",
      "//chrome/browser/search/background",
      "//chrome/browser/search_engines",
      "//chrome/browser/ui",
      "//chrome/browser/ui/search",
      "//chrome/test:test_support",
      "//chrome/test:test_support_ui",
      "//chrome/test/supervised_user:test_support",
      "//content/test:test_support",
      "//testing/gtest",
    ]

    if (is_chromeos) {
      deps += [ "//chrome/browser/ash/ownership" ]
    }
  }
}
